# portaltrevvos

./: .dockerignore  .gitignore  Dockerfile.api  Dockerfile.portal  README.md  amplify.yml  docker-compose.yml  package.json  pnpm  pnpm-lock.yaml  pnpm-workspace.yaml  render.yaml  tsconfig.base.json
apps/maia-api/: README.md  alembic.ini  pyproject.toml
apps/maia-api/alembic/: env.py
apps/maia-api/alembic/versions/: 202604270001_create_maia_schema.py  202604270002_create_couples_table.py
apps/maia-api/app/: main.py
apps/maia-api/app/api/: deps.py  router.py
apps/maia-api/app/api/v1/: couples.py  health.py  me.py  router.py
apps/maia-api/app/core/: config.py  errors.py  security.py
apps/maia-api/tests/: test_api_deps.py  test_couples.py  test_couples_api.py  test_db_config.py  test_health.py  test_me_auth.py  test_trevvos_jwt.py
apps/studio-api/: DISCOVERY.md  README.md  alembic.ini  pyproject.toml
apps/studio-api/alembic/: env.py
apps/studio-api/alembic/versions/: 202605072200_create_studio_initial_domain.py  202605072330_add_textual_workflow_domain.py  202605080030_add_visual_render_domain.py  202605081200_add_brand_assets_and_ai_visuals.py
apps/studio-api/app/: main.py
apps/studio-api/app/core/: config.py  database.py
apps/studio-api/app/shared/: enums.py  errors.py  pagination.py  storage.py  text.py
apps/studio-api/tests/: conftest.py  test_ai_content.py  test_ai_content_schema.py  test_brand_assets_ai_visual.py  test_content_radar.py  test_content_radar_schema.py  test_domain_flow.py  test_enum_mapping.py  test_health.py  test_rendering.py
docs/: deploy-vps.md  (+6 more)
(+424 files in other folders)
