[project]
name = "studio-api"
version = "0.1.0"
description = "FastAPI backend bootstrap for Trevvos Studio."
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "alembic>=1.14.0",
    "asyncpg>=0.30.0",
    "fastapi>=0.115.0",
    "jinja2>=3.1.6",
    "openai>=1.82.0",
    "pillow>=11.0.0",
    "pydantic-settings>=2.6.0",
    "playwright>=1.55.0",
    "python-multipart>=0.0.20",
    "sqlalchemy[asyncio]>=2.0.36",
    "uvicorn[standard]>=0.30.0",
]

[dependency-groups]
dev = [
    "aiosqlite>=0.21.0",
    "httpx>=0.27.0",
    "pytest>=8.3.0",
    "ruff>=0.6.0",
]

[tool.ruff]
line-length = 88
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
